# zero-conf-mesh

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.omx/: metrics.json
.omx/logs/: omx-2026-04-01.jsonl
.omx/state/: hud-state.json  notify-fallback-authority-owner.json  notify-fallback-state.json  notify-fallback.pid  session.json  update-check.json
.omx/state/sessions/omx-1775069577388-hdlu69/: AGENTS.md
.omx/state/sessions/omx-1775071322978-j1gmno/: AGENTS.md
.omx/state/sessions/omx-1775071361973-otwpac/: AGENTS.md
docs/: specs.md
examples/: single_node.rs  two_nodes.rs
scripts/: install.sh
src/: broadcaster.rs  builder.rs  config.rs  error.rs  events.rs  lib.rs  listener.rs  mesh.rs  registry.rs  types.rs
tests/: runtime_mesh.rs
