[package]
name = "zero-conf-mesh"
version = "0.1.0"
edition = "2024"
description = "Zero-configuration LAN service discovery for multi-agent systems via mDNS/DNS-SD"
license = "MIT"
repository = "https://example.com/zero-conf-mesh"
rust-version = "1.85"

[dependencies]
mdns-sd = "0.18.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
unreachable_pub = "deny"
unused_must_use = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[lints.clippy]
redundant_clone = "deny"
