[package]
name = "zero-conf-mesh"
version = "0.1.2"
edition = "2024"
description = "Zero-configuration LAN service discovery for multi-agent systems via mDNS/DNS-SD"
license = "MIT"
repository = "https://github.com/0xBoji/zero-conf-mesh"
homepage = "https://github.com/0xBoji/zero-conf-mesh"
readme = "README.md"
keywords = ["mdns", "dns-sd", "service-discovery", "agent", "ai"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.85"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/CHANGELOG.md",
    "/README.md",
    "/docs/specs.md",
    "/examples/*.rs",
    "/src/**/*.rs",
    "/tests/**/*.rs",
]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
hmac = "0.12.1"
mdns-sd = "0.18.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
unreachable_pub = "deny"
unused_must_use = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[lints.clippy]
redundant_clone = "deny"
